Fix section headings contrast: override --bulma-text-strong-l to 10%

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -71,4 +71,5 @@
 // Override Bulma 1.0 default text color (#4a4a4a) to match original design (#333)
 :root {
   --bulma-text-l: 20%;
+  --bulma-text-strong-l: 10%;
 }
